--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <!-- Quote -->
     <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote">Le passé et le présent sont nos moyens ; le seul avenir est notre fin.</span>
+        <span id="quote"></span>
     </div>
 <!-- Author -->
     <div class="quote-author">
-        <span id="author">Blaise Pascal</span>
+        <span id="author"></span>
     </div>
 <!-- Buttons -->
     <div class="button-container">
