Typeit Js + Avatar

--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="quote-container" id="quote-container">
 
+<div class="quote-container" id="quote-container">
+    <div class="title-set">
+        <img src="assets/breaking_bad_chemisrty_avatar_heisenberg-512.webp" alt="breaking bad">
+        <h1 id="title"></h1>
+    </div>
 <!-- Quote -->
     <div class="quote-text">
         <i class="fas fa-quote-left"></i>
@@ -29,8 +33,13 @@
         <button id="new-quote">New Quote</button>
     </div>
 </div>
-    
+ 
+<!-- Loader -->
+<div class="loader" id="loader">
+
+</div>
 <!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/typeit@7.0.4/dist/typeit.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
